set(LIBRARIES coros malog ${DEPENDENT_LIBRARIES})
add_executable(compute compute.cpp)
target_link_libraries(compute ${LIBRARIES})
add_executable(echo echo.cpp)
target_link_libraries(echo ${LIBRARIES})
set(rtmpd_SRC rtmp_conn.cpp rtmp_server.cpp rtmp_main.cpp)
add_executable(rtmpd ${rtmpd_SRC})
target_link_libraries(rtmpd ${LIBRARIES})