set(LIBRARIES coros malog ${DEPENDENT_LIBRARIES} boost_context-mt)
add_executable(compute compute.cpp)
target_link_libraries(compute ${LIBRARIES})
add_executable(echo echo.cpp)
target_link_libraries(echo ${LIBRARIES})
add_executable(pingpong pingpong.cpp)
target_link_libraries(pingpong ${LIBRARIES})
